syntax = "proto3";
option go_package = "./warehousepb";

import "models.proto";

message AuthRequest {
  string access_token = 1;
}

message AuthResponse {
  User user = 1;
}

