syntax = 'proto3';
option go_package = "./protogen";

message User {
  string id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  string picture = 5;
  string email = 6;
  bool via_google = 7 [json_name="via_google"];
  bool verified = 8;
  bool is_developer = 9;
  string created_at = 10 [json_name="created_at"];
  string updated_at = 11 [json_name="updated_at"];
  string password = 12;
}

// ---------- Create user ----------
message CreateUserMsg {
  string username = 1;
  string firstname = 2;
  string lastname = 3;
  string password = 4;
  string email = 5;
  bool via_google = 6;
}

message CreateUserResponse {
  string user_id = 1;
}

// ---------- Get user ----------
message GetUserByEmailMsg {
  string email = 1;
}

message GetUserByIdMsg {
  string user_id = 1;
}

// ---------- Reset password ----------
message ResetPasswordRequest {
  string user_id = 1;
  string password = 2;
}

message ResetPasswordResponse {
  string user_id = 1;
}

// ---------- Update user status ----------
message UpdateVerificationStatusRequest {
  string user_id = 1;
  string email = 2;
}

message UpdateVerificationStatusResponse {
  bool verified = 1;
}

// ---------- Upload user image ----------
message UploadImageRequest {
  bytes chunk = 1;
  string user_id = 2;
  string image_type = 3;
}

message UploadImageResponse {
  uint32 size = 1;
  string id = 2;
}

service UserService {
  rpc GetUserByEmail(GetUserByEmailMsg) returns (User);
  rpc GetUserById(GetUserByIdMsg) returns (User);
  rpc CreateUser(CreateUserMsg) returns (CreateUserResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc UploadUserImage(stream UploadImageRequest) returns (UploadImageResponse);
  rpc UpdateVerificationStatus(UpdateVerificationStatusRequest) returns (UpdateVerificationStatusResponse);
}